--- a/defs.tex
+++ b/defs.tex
@@ -46,3 +46,19 @@
 {added}\\ \mdf%
 {modified}\\ \rmv%
 {deleted} }}
+
+\hyphenation{pa-ra-digm}
+\hyphenation{ho-mo-ge-ni-za-tion}
+\hyphenation{me-ta-ma-te-ri-al}
+\hyphenation{me-ta-ma-te-ri-als}
+\hyphenation{fre-quen-cy}
+\hyphenation{fre-quen-ci-es}
+\hyphenation{te-ra-hertz}
+\hyphenation{ho-mo-ge-ne-ous}
+\hyphenation{si-mu-la-ti-on}
+\hyphenation{}
+\hyphenation{}
+
+
+\clubpenalty=1000
+\widowpenalty=1000
