--- a/result.tex
+++ b/result.tex
@@ -279,7 +279,7 @@ The sample presented above in Fig. \ref{fg_bousek}, though not applicable as a m
 A much better match was obtained by simple elongation of the conductive stripes to 40 $\upmu$m (blue line in Fig. \ref{fg_bousekspectra}). This may reflect the fact that the wires were surrounded by a highly doped, conductive zones of silicon.
 Although not taking into account the dissipative losses, such a simulation correctly identifies the resonance freqeuncy of the stripes. It also, at least quantitatively, matches the asymmetric spectral shape, which is caused by the onset of diffraction into the silicon substrate at $f_c = c/(50\;$ $\upmu$m$)/N_{\text{Si}} \approx 1730$ GHz. 
 
-The presented simulations were not optimized for the dissipative losses in silicon, which could be modeled with more detailed knowledge of the structure preparation. %TODO unduplicate rewrite?
+The presented simulations were not optimized for the dissipative losses in silicon, which could be modelled with more detailed knowledge of the structure preparation. %TODO unduplicate rewrite?
 
 %}}}
 %     \FloatBarrier %====================================================================================================
@@ -595,7 +595,7 @@ Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908b
 \end{figure}
 %}}}
 \paragraph{Dielectric losses}%{{{
-Unlike split-ring resonators, where the high-frequency dissipative losses depend on many factors such as the metal surface, eddy currents and fine details in the geometry, the losses in dielectric resonators can be more accurately modeled and their effect can be reliably computed by the FDTD simulation. 
+Unlike split-ring resonators, where the high-frequency dissipative losses depend on many factors such as the metal surface, eddy currents and fine details in the geometry, the losses in dielectric resonators can be more accurately modelled and their effect can be reliably computed by the FDTD simulation. 
 
 We used a realistic model \cite{baumard1977_epsilon_TiO2} of permittivit of polycrystalline rutile (TiO$_{2}$), which was already plotted in Fig. \ref{fg_tio2eps}. In the terahertz range it counts among high-permittivity dielectrics with relatively low losses compared to similar materials:
 \begin{equation}\epsrl(f=1\text{ THz}) = 94.2-2.43\text{i}. \label{eq_tio2}\end{equation}
