--- a/theory.tex
+++ b/theory.tex
@@ -1417,7 +1417,7 @@ In contrast, the PhC research focuses on \textit{whether} the wave can propagate
 
 This also justifies denoting MMs and PhCs as two different \textit{paradigms} rather than two distinct \textit{classes} of periodic structures, and it is the reason why the neutral term of \textit{periodic structure} is used in this thesis. 
 
-With this in mind, as the author believes that there is no need for a strict rule for classification. Some structures are then more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
+With this in mind, the author believes that there is no need for a strict rule for classification. Some structures are then more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
 %anything that is subject to homogenisation - i.e. a structure for which we can apply the Bloch's-Floquet theorem
 %and determine the K-vector.
 
